styles/index.css
/* ... */
/*
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/hover
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/any-pointer
  - https://patrickhlauke.github.io/touch/pointer-hover-any-pointer-any-hover/results/
  - https://css-tricks.com/interaction-media-features-and-their-potential-for-incorrect-assumptions/
*/
/*
 * cursors
 *   - https://developer.mozilla.org/en-US/docs/Web/CSS/cursor
 *   - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/pointer
 */
@media (pointer: fine)   { /* mouse */ }
@media (pointer: coarse) { /* finger */ }

@media screen and (min-width: 1000px)
  { :root { --max-width: 90vw } }

/*
 * pseudo elements - https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements
 */
::before, ::after {
  /* https://stackoverflow.com/questions/8820286/how-to-remove-only-underline-from-abefore */
  display: inline-block;
}

/*
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * - https://stackoverflow.com/a/16982510/7133471
 * - https://twitter.com/miketaylr/status/12228805301
 * - https://css-tricks.com/almanac/selectors/s/selection/
 */

/* scrollbars */
::-webkit-scrollbar {
  /* entire scrollbar region */
  width: 1em;
  background-color: transparent;
}
::-webkit-scrollbar:hover {
 background-color:  rgba(0,0,0,0.0618);
}
::-webkit-scrollbar-track {
  /* entire track region */
  background-color: transparent;
}
::-webkit-scrollbar-track:hover {
  background-color: transparent;
}
::-webkit-scrollbar-track-piece, ::-webkit-scrollbar-corner {
  /* track pieces */
  background: transparent;
}
::-webkit-scrollbar-track-piece:hover,
::-webkit-scrollbar-corner:hover {
  /* (unscrolled) track pieces */
  background-color:  rgba(255,255,255,0.618);
}
::-webkit-scrollbar-thumb {
  /* scrollbar thumb */
  /* test scrollbar height */
  height: 30%;
  border-radius: 0.618em;
  outline: 0.1618em solid;
  outline-color: ButtonText;
  outline-offset: -0.1618em;
  background-color:  ButtonFace;
  border: .3em solid ButtonFace;
}
::-webkit-scrollbar-thumb:hover {
  background-color: CurrentColor;
  outline-color: CurrentColor;
}
::backdrop
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/::backdrop */
  { background-color: currentColor }
::-moz-selection {
  color: HighlightText;
  background: Highlight;
  border-radius: 2em;
}
::selection {
  color: currentColor;
  background: Highlight;
}
::-moz-focus-inner { /* Remove the inner border and padding of focus outlines in Firefox */
  padding:      0;
  border-style: none
}
:-moz-focusring
  /* Restore focus outline - https://github.com/necolas/normalize.css/issues/481 */
  { outline: 1px dotted ButtonText }

html {}
html:focus-within
  { scroll-behavior: smooth /* https://css-tricks.com/fixing-smooth-scrolling-with-find-on-page/ */ }

/* SCROLL SNAPPING
  - https://drafts.csswg.org/css-scroll-snap-1/
  - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Scroll_Snap/Basic_concepts
*/
body
  { scroll-snap-type: y mandatory }
body > nav, body > main, body > aside, body > footer
  { background: Canvas }
body > nav
  { box-shadow: var(--shadow) }
body > main {scroll-snap-align: start }
body > aside
  { background: ButtonFace }
body > footer
  { }

/*
  -   https://meowni.ca/hidden.is.a.lie.html
  - hidden - https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/hidden
  - https://css-tricks.com/comparing-various-ways-to-hide-things-in-css/
  - Invisible content - https://webaim.org/techniques/css/invisiblecontent/
  - until-found
    - https://css-tricks.com/newsletter/295-hidden-until-found/
    - https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/hidden#the_hidden_until_found_state
*/
template /* IE custom elements */
  { display: none }

[hidden], [aria-hidden=true], template {
  width: 1px;
  height: 1px;
  display: n;
  overflow: hidden;
   /* be careful..can be overridden */
  position: absolute;
  white-space: nowrap; /* https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe */
  pointer-events: none;
  clip-path: inset(50%);
}

header, h1, h2, h3, h4, h5, h6 {
  max-width: 45rem;
  padding: var(--margin-collapse-bugfix) var(--font-size);
}

iframe {
  border: none;
  background: canvas;
  border-radius: 0.618em;
  box-shadow: var(--box-shadow);
}
hr { /* https://www.lifewire.com/styling-horizontal-rule-tag-3466399 */
  border: 0;
  height: .15em;
  opacity: 0.25;
  max-width: 80vw;
  overflow: visible;
  box-sizing: content-box
}

mark {
  padding: .618em;
  padding: 0.1618em;
  border-radius: 0.318em;
  text-shadow: 0.06812em 0.06812em 0 canvas;
  box-shadow: var(--box-shadow);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/box-decoration-break */
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
mark::before,
mark::after {
  width: 0;
  white-space: nowrap;
  clip-path: inset(50%);
}
mark::before
  { content: '[highlight start]' }
mark::after
  { content: '[highlight end]' }

data, var
  { outline: 0.01681em dotted currrentColor }

pre, code, kbd, samp
  { border-radius: 0.618em }
pre code {
  display: inherit;
  border-radius: unset;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}

/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3/
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
ul {}
ol {}
li {}
dl {}
dt {}
dd {}

ul[role=list]
  { list-style: none; /* https://piccalil.li/blog/a-modern-css-reset/ */ }
ul, ol
  { list-style-position: inside }
ul ul, ol ol
  { }
nav summary + ul {
  list-style: '➱' inside;
}
nav > details > ul {
  list-style: none;
}

nav > details > ul li li:hover {
  list-style-type: '➯';
}

aside ul {
  list-style-type: '-';
}

/**** COUNTERS *******
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo/
*/


/* http://html5doctor.com/the-details-and-summary-elements/ */
details { }
/* ... */

